--- a/meu/trabalho2/trabalho/trabalhocss/trabalho2.css
+++ b/meu/trabalho2/trabalho/trabalhocss/trabalho2.css
@@ -282,14 +282,12 @@ video {
     nav ul.active {
         display: flex;
     }
-}
-    @media screen and (max-width: 480px) {
-        .gallery-container {
-            flex-direction: column;
-            align-items: center;
-        }
-        video {
-            width: 100% !important;
+    .gallery-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    video {
+        width: 100% !important;
         height: auto !important;
     }
     iframe {
@@ -303,14 +301,14 @@ video {
         font-size: 32px;
     }
 }
-
 .produto.card {
     background-color: #f4f4f4;
     border-radius: 10px;
     padding: 15px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     transition: transform 0.2s;
-    width: 250px;
+    width: 100%;
+    max-width: 350px;
     margin: 10px;
 }
 .produto.card:hover {
@@ -318,7 +316,7 @@ video {
 }
 .produto.card img {
     width: 100%;
-    height: 150px;
+    height: 250px;
     object-fit: cover;
     border-radius: 5px;
 }
